--- a/clients.html
+++ b/clients.html
@@ -63,7 +63,7 @@
             <!-- Start Header Navigation -->
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-menu"> <i class="fa fa-bars"></i> </button>
-                <a class="navbar-brand" href="index.php"><img src="images/brand/logo-1.png"
+                <a class="navbar-brand" href="index.html"><img src="images/brand/logo-1.png"
                  class="logo logo-scrolled"  alt=""> </a>
             </div>
             <!-- End Header Navigation -->
@@ -71,45 +71,45 @@
             <div class="collapse navbar-collapse" id="navbar-menu">
                 <ul class="nav navbar-nav navbar-right" data-in="fadeInDown" data-out="fadeOutUp">
                     <li class="active ">
-                        <a href="index.php" >Home</a>
+                        <a href="index.html" >Home</a>
                     </li>
                     <li class="dropdown">
                         <a href="" class="dropdown-toggle" data-toggle="dropdown">Our Story</a>
                         <ul class="dropdown-menu">
-                           <li><a href="about.php">About</a></li>
-                           <li><a href="mission.php">Mission</a></li>
-                           <li><a href="unique.php">How Are We Unique</a></li>
-                           <li><a href="culture.php">Our Culture</a></li>
-                           <li><a href="clients.php">Our Clients</a></li>
+                           <li><a href="about.html">About</a></li>
+                           <li><a href="mission.html">Mission</a></li>
+                           <li><a href="unique.html">How Are We Unique</a></li>
+                           <li><a href="culture.html">Our Culture</a></li>
+                           <li><a href="clients.html">Our Clients</a></li>
                         </ul>
                     </li>
                     <li class="dropdown">
-                        <a href="services.php" class="dropdown-toggle" data-toggle="dropdown">Services</a>
+                        <a href="services.html" class="dropdown-toggle" data-toggle="dropdown">Services</a>
                         <ul class="dropdown-menu">
-                           <li><a href="services.php#staffing">Staffing</a></li>
-                           <li><a href="services.php#transportation">Transportation</a></li>
-                           <li><a href="services.php#behavior">Behavior Supports</a></li>
+                           <li><a href="services.html#staffing">Staffing</a></li>
+                           <li><a href="services.html#transportation">Transportation</a></li>
+                           <li><a href="services.html#behavior">Behavior Supports</a></li>
                         </ul>
                     </li>
                     <li class="dropdown">
                         <a href="" class="dropdown-toggle" data-toggle="dropdown">Employers</a>
                         <ul class="dropdown-menu">
-                           <li><a href="providers.php">Our Service Providers</a></li>
-                            <li><a href="request.php">Request Fof Employee</a></li>
+                           <li><a href="providers.html">Our Service Providers</a></li>
+                            <li><a href="request.html">Request Fof Employee</a></li>
                         </ul>
                     </li>
                     <li class="dropdown">
                         <a href="" class="dropdown-toggle" data-toggle="dropdown">Career Gateway</a>
                         <ul class="dropdown-menu">
-                           <li><a href="testimonial.php">Testimonials</a></li>
-                            <li><a href="application.php">Application for Employment</a></li>
+                           <li><a href="testimonial.html">Testimonials</a></li>
+                            <li><a href="application.html">Application for Employment</a></li>
                         </ul>
                     </li>
                      <li>
-                        <a href="contact.php" >Contact Us</a>
+                        <a href="contact.html" >Contact Us</a>
                     </li>
                      <li>
-                        <a href="registration.php" class="btn btn-default btn-outline hover-effect2" style="padding: 10px;margin: 10px 0">Registration</a>
+                        <a href="registration.html" class="btn btn-default btn-outline hover-effect2" style="padding: 10px;margin: 10px 0">Registration</a>
                     </li>
                 </ul>
             </div>
@@ -146,141 +146,31 @@
     </nav>
     <!-- End Navigation -->
     <!-- Banner -->
-<!--    <section class="inner-intro dark-bg overlay jarallax" data-overlay-color="dark" data-overlay="8" data-bg-img="images/slide1.jpg" data-jarallax-video="https://www.youtube.com/watch?v=0aCbYxJ9gus">-->
-<!--        <div class="container">-->
-<!--            <div class="row intro-title">-->
-<!--                <div class="col-sm-8 col-md-offset-2 text-center">-->
-<!--                    <h1 class="title">A Leader in Workforce Solutions and Behavior Support</h1>-->
-<!--                </div>-->
-<!--            </div>-->
-<!--        </div>-->
-<!--    </section>-->
+    <div class="div" style="position: relative; overflow: hidden" >
+        <video style="position: absolute; width: 200%;height: 200%;transform: translate(-50%,-50%);left:50%;top: 50%;" autoplay loop id="video-background" muted plays-inline>
+            <source src="video/bg.mkv" type="video/mp4">
+        </video>
+        <section class="inner-intro bg overlay jarallax white-text" data-overlay-color="dark" data-overlay="6" >
+        <div class="container">
+            <div class="row intro-title">
+                <div class="col-sm-12 text-center">
+                    <h1 class="title">OUR CLIENTS</h1>
+                </div>
+            </div>
+        </div>
+    </section>
+    </div>
     <!-- End Banner -->
     <!-- Our service -->
-
-<!--    <div class="container mt-5 pt-5 mb-5 pb-5">-->
-<!--        <div class="row intro-title">-->
-<!--            <div class="col-sm-8 col-md-offset-2 text-center">-->
-<!--                <h1 class="title">A Leader in Workforce Solutions and Behavior Support</h1>-->
-<!--            </div>-->
-<!--        </div>-->
-<!--    </div>-->
-    <section class="grey-bg" id="staffing">
-        <div class="container">
-
-            <div class="row">
-                <div class="col-md-2 text-left">
-                   <img src="images/icon/Value-Add-Icon.png" alt="">
-                </div>
-                <div class="col-md-10 text-left mt-1 ">
-                   <h2 class="m-0">Per Diem Coverage</h2>
-                    <p class="lead">Flexible, on-demand access to qualified staff from a single shift to several weeks.</p>
-                </div>
-            </div>
-        </div>
-    </section>
     <section class="">
         <div class="container">
             <div class="row">
-                <div class="col-md-2 text-left">
-                   <img src="images/icon/future.png" alt="">
-                </div>
-                <div class="col-md-10 text-left mt-1 ">
-                   <h2 class="m-0">Long-Term Contingent</h2>
-                    <p class="lead">Extended coverage for longer needs, usually 4 to 52 weeks. Remain fully staffed for leaves, adapt to peak demand seasons and access specialized skills for as long as you require.</p>
+                <div class="col-md-12 text-left mt-1 ">
+                   <p>We are dedicated to support the person experiencing exceptional needs and their families through a workforce that displays the highest level of ethics, provides exceptional customer service and honor all commitments.</p>
                 </div>
             </div>
         </div>
     </section>
-    <section class="grey-bg">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-2 text-left">
-                   <img src="images/icon/replacement.png" alt="">
-                </div>
-                <div class="col-md-10 text-left mt-1 ">
-                   <h2 class="m-0">Permanent Placement</h2>
-                    <p class="lead">Select from among carefully screened candidates, recruited to your specifications. Pay only if you hire a candidate we refer..</p>
-                </div>
-            </div>
-        </div>
-    </section>
-    <section class="">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-2 text-left">
-                   <img src="images/icon/referral.png" alt="">
-                </div>
-                <div class="col-md-10 text-left mt-1 ">
-                   <h2 class="m-0">Recruitment Process Outsourcing (RPO)</h2>
-                    <p class="lead">Recruitment Process Outsourcing (RPO) is one of our Core Competences; we understand each client’s unique environment and deliver a scalable, customized solution to meet their needs. Our RPO services deliver cost-effectiveness recruiting and an efficient solution for attracting and retaining top talent.</p>
-                </div>
-            </div>
-        </div>
-    </section>
-    <section class="grey-bg" id="transportation">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-2 text-left">
-                   <img width="120px" src="images/icon/car-side-solid.png" alt="">
-                </div>
-                <div class="col-md-10 text-left mt-1 ">
-                   <h2 class="m-0">Transportation</h2>
-                    <p class="lead">We eliminate transportation challenges for individuals experiencing developmental disability.  All our drivers are direct support professionals in possession of a class G license and the required insurance in accordance with the legislation.</p>
-                </div>
-            </div>
-        </div>
-    </section>
-    <section class="">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-2 text-left">
-                   <img width="120px" src="images/icon/workforce-solutions.png" alt="">
-                </div>
-                <div class="col-md-10 text-left mt-1 ">
-                   <h2 class="m-0"> Home Care Services</h2>
-                    <p class="lead">The Outcome Network originated from Ebocam Home Healthcare. which was one of the  largest third-party provider of non-medical, in-home care workers for the elderly in the GTA. Our in-home care program, managed by our Network recruits, hires, and manages skilled workers for in-home patient care.</p>
-                </div>
-            </div>
-        </div>
-    </section>
-    <section class="grey-bg">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-2 text-left">
-                   <img src="images/icon/icon-ability2.png" alt="">
-                </div>
-                <div class="col-md-10 text-left mt-1 ">
-                   <h2 class="m-0">Managed Services Program (MSP)</h2>
-                    <p class="lead">We assume 100% responsibility for meeting and managing all your contingent needs. Centralizing and streamlining your staffing function yields greater control, faster response, improved candidate quality, enhanced compliance and increased cost efficiency.</p>
-                </div>
-            </div>
-        </div>
-    </section>
-    <section class="" id="behavior">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-2 text-left">
-                   <img width="120px" src="images/icon/Career-Explorations-Green.png" alt="">
-                </div>
-                <div class="col-md-10 text-left mt-1 ">
-                   <h2 class="m-0">Consulting Services</h2>
-                    <p class="lead">Efficient, functional human resource processes, accurate workforce needs identification, actionable plans, and effective change management are all vital to organizational success.
-The Outcome Network consulting practice can help you get there with our targeted engagements and proven solutions to improve productivity, promote efficiency, enhance communication, and increase employee engagement.
-Our Network works as an extension of your organization, providing expert guidance, deploying proven strategies, and engaging management solutions to help your organization thrive. Our solutions include, but are not limited to:</p>
-                   <ul>
-                      <li>Behavior Support solutions</li>
-                      <li>Treatment Plans</li>
-                      <li>Transition Planning</li>
-                      <li>Risk Assessments</li>
-                      <li>Training and Development programs</li>
-                      <li>Translation Services from English to French and from French to English</li>
-                   </ul>
-                </div>
-            </div>
-        </div>
-    </section>
-    
     <section class="inner-intro small-intro theme-bg">
             <div class="container">
                <div class="row intro-title">
@@ -289,9 +179,9 @@ Our Network works as an extension of your organization, providing expert guidanc
                   </div>
                   <div class="col-sm-12">
                      <div class="row">
-                        <div class="col-sm-12 text-center"><span class="sub-title">Our network connect people experiencing disability to support and services all across Ontario</span></div>
+                        <div class="col-sm-12 text-center"><span class="sub-title">We provide you with your staffing needs and connect you to resources to enhance the needs of the people experiencing disability</span></div>
                         <div style="display: flex;justify-content: center; width: 100%;padding-top: 30px;">
-                            <a href="application.php" class=" btn btn-default btn-outline animated btn-radius white-border theme-bg white-text fill-white">Submit Your Resume <i class="fa fa-arrow-right" aria-hidden="true"></i></a>
+                            <a href="request.html" class=" btn btn-default btn-outline animated btn-radius white-border theme-bg white-text fill-white">Request An Employee<i class="fa fa-arrow-right" aria-hidden="true"></i></a>
                         </div>
                      </div>
                   </div>
@@ -312,18 +202,18 @@ Our Network works as an extension of your organization, providing expert guidanc
                     <div class="col-sm-3 col-xs-6 col-xx-12 mb-4">
                         <h6 class="text-uppercase">Services</h6>
                         <ul class="list-unstyled">
-                            <li><a href="services.php#staffing">Staffing</a></li>
-                            <li><a href="services.php#transportation">Transportation</a></li>
-                            <li><a href="services.php#behavior">Behavior Supports</a></li>
+                            <li><a href="services.html#staffing">Staffing</a></li>
+                            <li><a href="services.html#transportation">Transportation</a></li>
+                            <li><a href="services.html#behavior">Behavior Supports</a></li>
                         </ul>
                     </div>
                     <div class="col-sm-3 col-xs-6 col-xx-12 mb-4">
                         <h6 class="text-uppercase">Our Story</h6>
                         <ul class="list-unstyled">
-                            <li><a href="about.php">About</a></li>
-                            <li><a href="mission.php">Mission</a></li>
-                            <li><a href="unique.php">How Are We Unique</a></li>
-                            <li><a href="culture.php">Our Culture</a></li>
+                            <li><a href="about.html">About</a></li>
+                            <li><a href="mission.html">Mission</a></li>
+                            <li><a href="unique.html">How Are We Unique</a></li>
+                            <li><a href="culture.html">Our Culture</a></li>
                         </ul>
                     </div>
                     <div class="col-sm-3 col-xs-6 col-xx-12 mb-4">
