--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             <!-- Start Header Navigation -->
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-menu"> <i class="fa fa-bars"></i> </button>
-                <a class="navbar-brand" href="index.php">
+                <a class="navbar-brand" href="index.html">
                     <img src="images/brand/logo-2.png" class="logo logo-display" alt="">
                     <img src="images/brand/logo-1.png" class="logo logo-scrolled" alt=""> </a>
             </div>
@@ -74,45 +74,45 @@
             <div class="collapse navbar-collapse" id="navbar-menu">
                 <ul class="nav navbar-nav navbar-right" data-in="fadeInDown" data-out="fadeOutUp">
                     <li class="active ">
-                        <a href="index.php" >Home</a>
+                        <a href="index.html" >Home</a>
                     </li>
                     <li class="dropdown">
                         <a href="" class="dropdown-toggle" data-toggle="dropdown">Our Story</a>
                         <ul class="dropdown-menu">
-                           <li><a href="about.php">About</a></li>
-                           <li><a href="mission.php">Mission</a></li>
-                           <li><a href="unique.php">How Are We Unique</a></li>
-                           <li><a href="culture.php">Our Culture</a></li>
-                           <li><a href="clients.php">Our Clients</a></li>
+                           <li><a href="about.html">About</a></li>
+                           <li><a href="mission.html">Mission</a></li>
+                           <li><a href="unique.html">How Are We Unique</a></li>
+                           <li><a href="culture.html">Our Culture</a></li>
+                           <li><a href="clients.html">Our Clients</a></li>
                         </ul>
                     </li>
                     <li class="dropdown">
-                        <a href="services.php" class="dropdown-toggle" data-toggle="dropdown">Services</a>
+                        <a href="services.html" class="dropdown-toggle" data-toggle="dropdown">Services</a>
                         <ul class="dropdown-menu">
-                           <li><a href="services.php#staffing">Staffing</a></li>
-                           <li><a href="services.php#transportation">Transportation</a></li>
-                           <li><a href="services.php#behavior">Behavior Supports</a></li>
+                           <li><a href="services.html#staffing">Staffing</a></li>
+                           <li><a href="services.html#transportation">Transportation</a></li>
+                           <li><a href="services.html#behavior">Behavior Supports</a></li>
                         </ul>
                     </li>
                     <li class="dropdown">
                         <a href="" class="dropdown-toggle" data-toggle="dropdown">Employers</a>
                         <ul class="dropdown-menu">
-                           <li><a href="providers.php">Our Service Providers</a></li>
-                            <li><a href="request.php">Request Fof Employee</a></li>
+                           <li><a href="providers.html">Our Service Providers</a></li>
+                            <li><a href="request.html">Request Fof Employee</a></li>
                         </ul>
                     </li>
                     <li class="dropdown">
                         <a href="" class="dropdown-toggle" data-toggle="dropdown">Career Gateway</a>
                         <ul class="dropdown-menu">
-                           <li><a href="testimonial.php">Testimonials</a></li>
-                            <li><a href="application.php">Application for Employment</a></li>
+                           <li><a href="testimonial.html">Testimonials</a></li>
+                            <li><a href="application.html">Application for Employment</a></li>
                         </ul>
                     </li>
                      <li>
-                        <a href="contact.php" >Contact Us</a>
+                        <a href="contact.html" >Contact Us</a>
                     </li>
                      <li>
-                        <a href="registration.php" class="btn btn-default btn-outline hover-effect2" style="padding: 10px;margin: 10px 0">Registration</a>
+                        <a href="registration.html" class="btn btn-default btn-outline hover-effect2" style="padding: 10px;margin: 10px 0">Registration</a>
                     </li>
                 </ul>
             </div>
@@ -159,7 +159,7 @@
                 <div class="col-md-8 col-md-offset-2 text-center">
                     <h1 class="title">The Outcome Network</h1>
                     <p>A Leader in staffing Solutions and Behavior Support</p>
-                    <a href="request.php" class="btn btn-default btn-radius btn-outline white-border white-text fill-white">Request An Employee</a>&nbsp;&nbsp; <a href="application.php" class="btn btn-default animated btn-radius theme-bg white-text">Submit Your Resume<i class="fa fa-arrow-right" aria-hidden="true"></i></a>
+                    <a href="request.html" class="btn btn-default btn-radius btn-outline white-border white-text fill-white">Request An Employee</a>&nbsp;&nbsp; <a href="application.html" class="btn btn-default animated btn-radius theme-bg white-text">Submit Your Resume<i class="fa fa-arrow-right" aria-hidden="true"></i></a>
                 </div>
             </div>
         </div>
@@ -181,7 +181,7 @@
             <div class="row">
                 <div class="col-sm-6 xs-mb-4">
                     <p class="lead" style="text-align: justify">The Outcome Network is a unique company designed to meet the changing needs in the human services field.  The Outcome Network    has recognized and met the needs of individuals, service providers, families, and staff, to enhance the services being provided to individuals experiencing disabilities. We are a leader in workforce solutions including temporary staffing services; behavior Support; transportation of people supported to their community of belonging; Volunteer supports; translation services ; online training; compliance and program consulting; . The services we provide are as unique and diverse as the agencies and people we work with and are tailored to meet each agency’s specific requirements.</p>
-                    <a href="about.php" class="btn btn-default btn-radius fill-dark">Read More</a>
+                    <a href="about.html" class="btn btn-default btn-radius fill-dark">Read More</a>
                 </div>
                 <div class="col-sm-6">
                     <div class="video-info"> <img class="img-responsive center-block" src="images/corporate/image1.jpg" alt="" /> <a class="popup-vimeo video-btn theme-bg" title="Video" href="https://www.youtube.com/watch?v=MYo-57LM_lk"><i class="icon-control-play icons"></i></a> </div>
@@ -679,18 +679,18 @@
                     <div class="col-sm-3 col-xs-6 col-xx-12 mb-4">
                         <h6 class="text-uppercase">Services</h6>
                         <ul class="list-unstyled">
-                            <li><a href="services.php#staffing">Staffing</a></li>
-                            <li><a href="services.php#transportation">Transportation</a></li>
-                            <li><a href="services.php#behavior">Behavior Supports</a></li>
+                            <li><a href="services.html#staffing">Staffing</a></li>
+                            <li><a href="services.html#transportation">Transportation</a></li>
+                            <li><a href="services.html#behavior">Behavior Supports</a></li>
                         </ul>
                     </div>
                     <div class="col-sm-3 col-xs-6 col-xx-12 mb-4">
                         <h6 class="text-uppercase">Our Story</h6>
                         <ul class="list-unstyled">
-                            <li><a href="about.php">About</a></li>
-                            <li><a href="mission.php">Mission</a></li>
-                            <li><a href="unique.php">How Are We Unique</a></li>
-                            <li><a href="culture.php">Our Culture</a></li>
+                            <li><a href="about.html">About</a></li>
+                            <li><a href="mission.html">Mission</a></li>
+                            <li><a href="unique.html">How Are We Unique</a></li>
+                            <li><a href="culture.html">Our Culture</a></li>
                         </ul>
                     </div>
                     <div class="col-sm-3 col-xs-6 col-xx-12 mb-4">
