--- a/providers.html
+++ b/providers.html
@@ -63,7 +63,7 @@
             <!-- Start Header Navigation -->
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-menu"> <i class="fa fa-bars"></i> </button>
-                <a class="navbar-brand" href="index.php"><img src="images/brand/logo-1.png"
+                <a class="navbar-brand" href="index.html"><img src="images/brand/logo-1.png"
                  class="logo logo-scrolled"  alt=""> </a>
             </div>
             <!-- End Header Navigation -->
@@ -71,45 +71,45 @@
             <div class="collapse navbar-collapse" id="navbar-menu">
                 <ul class="nav navbar-nav navbar-right" data-in="fadeInDown" data-out="fadeOutUp">
                     <li class="active ">
-                        <a href="index.php" >Home</a>
+                        <a href="index.html" >Home</a>
                     </li>
                     <li class="dropdown">
                         <a href="" class="dropdown-toggle" data-toggle="dropdown">Our Story</a>
                         <ul class="dropdown-menu">
-                           <li><a href="about.php">About</a></li>
-                           <li><a href="mission.php">Mission</a></li>
-                           <li><a href="unique.php">How Are We Unique</a></li>
-                           <li><a href="culture.php">Our Culture</a></li>
-                           <li><a href="clients.php">Our Clients</a></li>
+                           <li><a href="about.html">About</a></li>
+                           <li><a href="mission.html">Mission</a></li>
+                           <li><a href="unique.html">How Are We Unique</a></li>
+                           <li><a href="culture.html">Our Culture</a></li>
+                           <li><a href="clients.html">Our Clients</a></li>
                         </ul>
                     </li>
                     <li class="dropdown">
-                        <a href="services.php" class="dropdown-toggle" data-toggle="dropdown">Services</a>
+                        <a href="services.html" class="dropdown-toggle" data-toggle="dropdown">Services</a>
                         <ul class="dropdown-menu">
-                           <li><a href="services.php#staffing">Staffing</a></li>
-                           <li><a href="services.php#transportation">Transportation</a></li>
-                           <li><a href="services.php#behavior">Behavior Supports</a></li>
+                           <li><a href="services.html#staffing">Staffing</a></li>
+                           <li><a href="services.html#transportation">Transportation</a></li>
+                           <li><a href="services.html#behavior">Behavior Supports</a></li>
                         </ul>
                     </li>
                     <li class="dropdown">
                         <a href="" class="dropdown-toggle" data-toggle="dropdown">Employers</a>
                         <ul class="dropdown-menu">
-                           <li><a href="providers.php">Our Service Providers</a></li>
-                            <li><a href="request.php">Request Fof Employee</a></li>
+                           <li><a href="providers.html">Our Service Providers</a></li>
+                            <li><a href="request.html">Request Fof Employee</a></li>
                         </ul>
                     </li>
                     <li class="dropdown">
                         <a href="" class="dropdown-toggle" data-toggle="dropdown">Career Gateway</a>
                         <ul class="dropdown-menu">
-                           <li><a href="testimonial.php">Testimonials</a></li>
-                            <li><a href="application.php">Application for Employment</a></li>
+                           <li><a href="testimonial.html">Testimonials</a></li>
+                            <li><a href="application.html">Application for Employment</a></li>
                         </ul>
                     </li>
                      <li>
-                        <a href="contact.php" >Contact Us</a>
+                        <a href="contact.html" >Contact Us</a>
                     </li>
                      <li>
-                        <a href="registration.php" class="btn btn-default btn-outline hover-effect2" style="padding: 10px;margin: 10px 0">Registration</a>
+                        <a href="registration.html" class="btn btn-default btn-outline hover-effect2" style="padding: 10px;margin: 10px 0">Registration</a>
                     </li>
                 </ul>
             </div>
@@ -146,27 +146,25 @@
     </nav>
     <!-- End Navigation -->
     <!-- Banner -->
-    <div class="div" style="position: relative; overflow: hidden" >
-        <video style="position: absolute; width: 200%;height: 200%;transform: translate(-50%,-50%);left:50%;top: 50%;" autoplay loop id="video-background" muted plays-inline>
-            <source src="video/bg.mkv" type="video/mp4">
-        </video>
-        <section class="inner-intro bg overlay jarallax white-text" data-overlay-color="dark" data-overlay="6" >
-            <div class="container">
-                <div class="row intro-title">
-                    <div class="col-sm-12 text-center">
-                        <h1 class="title">About The Outcome Network </h1>
-                    </div>
-                </div>
-            </div>
-        </section>
-    </div>
+<!--    <section class="inner-intro dark-bg overlay jarallax" data-overlay-color="dark" data-overlay="8" data-bg-img="images/slide1.jpg" data-jarallax-video="https://www.youtube.com/watch?v=0aCbYxJ9gus">-->
+<!--        <div class="container">-->
+<!--            <div class="row intro-title">-->
+<!--                <div class="col-sm-12 text-center">-->
+<!--                    <h1 class="title">Our Service Providers</h1>-->
+<!--                </div>-->
+<!--            </div>-->
+<!--        </div>-->
+<!--    </section>-->
     <!-- End Banner -->
     <!-- Our service -->
     <section class="">
         <div class="container">
             <div class="row">
+<!--                <div class="col-sm-12 text-center">-->
+<!--                    <h1 class="title">Our Service Providers</h1>-->
+<!--                </div>-->
                 <div class="col-md-12 text-left mt-1 ">
-                   <p>The Outcome Network is a unique company designed to meet the changing needs in the human services field.  The Outcome Network    has recognized and met the needs of individuals, service providers, families, and staff, to enhance the services being provided to individuals experiencing disabilities. We are a leader in workforce solutions including temporary staffing services; behavior Support; transportation of people supported to their community of belonging; Volunteer supports; translation services ; online training; compliance and program consulting; . The services we provide are as unique and diverse as the agencies and people we work with and are tailored to meet each agency’s specific requirements. Many customers often use our supports heavily through times of change, expansion, or uncertainty and then adjust when needs stabilize. Other customers use us permanently for certain tasks or supports as part of their organizational design. Through training, consulting, or customized supports, The Outcome Network will help you gain the skills, understanding, and confidence to succeed in this field. Our consultants, trainers, and staffing experts are excited and ready to assist you in your areas of need! We hope you will consider The Outcome Network as a partner in providing excellent services to individuals experiencing disabilities. We look forward to earning and keeping your business!</p>
+                   <p>The Outcome Network will provide you with quality staff and lower costs for everyone. We understand that staffing is about more than just filling a position. Our focus is to actively recruit and carefully screen direct support professionals to provide the trusted network of the best healthcare talent when your need arises.</p>
                 </div>
             </div>
         </div>
@@ -179,9 +177,9 @@
                   </div>
                   <div class="col-sm-12">
                      <div class="row">
-                        <div class="col-sm-12 text-center"><span class="sub-title">Our network connect people experiencing disability to support and services all across Ontario</span></div>
+                        <div class="col-sm-12 text-center"><span class="sub-title">We provide you with your staffing needs and connect you to resources to enhance the needs of the people experiencing disability</span></div>
                         <div style="display: flex;justify-content: center; width: 100%;padding-top: 30px;">
-                            <a href="application.php" class=" btn btn-default btn-outline animated btn-radius white-border theme-bg white-text fill-white">Submit Your Resume <i class="fa fa-arrow-right" aria-hidden="true"></i></a>
+                            <a href="request.html" class=" btn btn-default btn-outline animated btn-radius white-border theme-bg white-text fill-white">Request An Employee<i class="fa fa-arrow-right" aria-hidden="true"></i></a>
                         </div>
                      </div>
                   </div>
@@ -202,18 +200,18 @@
                     <div class="col-sm-3 col-xs-6 col-xx-12 mb-4">
                         <h6 class="text-uppercase">Services</h6>
                         <ul class="list-unstyled">
-                            <li><a href="services.php#staffing">Staffing</a></li>
-                            <li><a href="services.php#transportation">Transportation</a></li>
-                            <li><a href="services.php#behavior">Behavior Supports</a></li>
+                            <li><a href="services.html#staffing">Staffing</a></li>
+                            <li><a href="services.html#transportation">Transportation</a></li>
+                            <li><a href="services.html#behavior">Behavior Supports</a></li>
                         </ul>
                     </div>
                     <div class="col-sm-3 col-xs-6 col-xx-12 mb-4">
                         <h6 class="text-uppercase">Our Story</h6>
                         <ul class="list-unstyled">
-                            <li><a href="about.php">About</a></li>
-                            <li><a href="mission.php">Mission</a></li>
-                            <li><a href="unique.php">How Are We Unique</a></li>
-                            <li><a href="culture.php">Our Culture</a></li>
+                            <li><a href="about.html">About</a></li>
+                            <li><a href="mission.html">Mission</a></li>
+                            <li><a href="unique.html">How Are We Unique</a></li>
+                            <li><a href="culture.html">Our Culture</a></li>
                         </ul>
                     </div>
                     <div class="col-sm-3 col-xs-6 col-xx-12 mb-4">
