--- a/request.html
+++ b/request.html
@@ -1,3 +1,81 @@
+<!--<?php-->
+<!--// if there ia post-->
+<!--if(isset( $_POST['name']) && $_POST['name'] == "" || isset($_POST['email']) && $_POST['email'] == "" || isset( $_POST['subject']) && $_POST['subject'] == "") {-->
+    <!--$error = 'Please Fill All Fields';-->
+<!--}else {-->
+    <!--if(isset($_FILES) && (bool) $_FILES) {-->
+        <!--$AllowedExtensions = ["pdf","doc","docx","gif","jpeg","jpg","png","rtf","txt"];-->
+        <!--$files = [];-->
+        <!--$server_file = [];-->
+        <!--foreach($_FILES as $name => $file) {-->
+            <!--$file_name = $file["name"];-->
+            <!--$file_temp = $file["tmp_name"];-->
+            <!--foreach($file_name as $key) {-->
+                <!--$path_parts = pathinfo($key);-->
+                <!--$extension = strtolower($path_parts["extension"]);-->
+                <!--if(!in_array($extension, $AllowedExtensions)) { die("Extension not allowed"); }-->
+                <!--$server_file[] = "uploads/{$path_parts["basename"]}";-->
+            <!--}-->
+            <!--for($i = 0; $i<count($file_temp); $i++) { move_uploaded_file($file_temp[$i], $server_file[$i]); }-->
+        <!--}-->
+        <!--$to = "shohag14748@gmail.com";-->
+        <!--$from = "jubokstp@premium70.web-hosting.com";-->
+        <!--$subject ="Application for employment";-->
+
+        <!--$job_name = $_POST['job_name'];-->
+        <!--$industry = $_POST['industry'];-->
+        <!--$time = $_POST['time'];-->
+        <!--$shift = $_POST['shift'];-->
+        <!--$location = $_POST['location'];-->
+        <!--$responsibility = $_POST['responsibility'];-->
+
+        <!--$name = $_POST['name'];-->
+        <!--$email = $_POST['email'];-->
+        <!--$phone = $_POST['phone'];-->
+
+        <!--$message = "Message From The Outcome Network-->
+        <!---->
+                     <!--Job Information-->
+                        <!--Job Name : ".$job_name."-->
+                        <!--Industry : ".$industry."-->
+                        <!--Time Frame : ".$time."-->
+                        <!--Shift : ".$shift."-->
+                        <!--Location : ".$location."-->
+                        <!--Responsibility : ".$responsibility."-->
+                     <!--Contact Information -->
+                        <!--Name : ".$name."-->
+                        <!--Phone : ".$phone."-->
+                        <!--Email : ".$email." ";-->
+
+        <!--$headers = "From: $from";-->
+        <!--$semi_rand = md5(time());-->
+        <!--$mime_boundary = "==Multipart_Boundary_x{$semi_rand}x";-->
+        <!--$headers .= "\nMIME-Version: 1.0\n" . "Content-Type: multipart/mixed;\n" . " boundary=\"{$mime_boundary}\"";-->
+        <!--$message = "This is a multi-part message in MIME format.\n\n" . "&#45;&#45;{$mime_boundary}\n" . "Content-Type: text/plain; charset=\"iso-8859-1\"\n" . "Content-Transfer-Encoding: 7bit\n\n" . $message . "\n\n";-->
+        <!--$message .= "&#45;&#45;{$mime_boundary}\n";-->
+        <!--$FfilenameCount = 0;-->
+        <!--for($i = 0; $i<count($server_file); $i++) {-->
+            <!--$afile = fopen($server_file[$i],"rb");-->
+            <!--$data = fread($afile,filesize($server_file[$i]));-->
+            <!--fclose($afile);-->
+            <!--$data = chunk_split(base64_encode($data));-->
+            <!--$name = $file_name[$i];-->
+            <!--$message .= "Content-Type: {\"application/octet-stream\"};\n" . " name=\"$name\"\n" .-->
+                <!--"Content-Disposition: attachment;\n" . " filename=\"$name\"\n" .-->
+                <!--"Content-Transfer-Encoding: base64\n\n" . $data . "\n\n";-->
+            <!--$message .= "&#45;&#45;{$mime_boundary}\n";-->
+        <!--}-->
+        <!--if(mail($to, $subject, $message, $headers)) {-->
+            <!--$error = "mail sent Successful";-->
+        <!--} else {-->
+            <!--$error =  "mail could not be sent!";-->
+        <!--}-->
+    <!--}-->
+
+
+<!--}-->
+
+<!--?>-->
 <!DOCTYPE html>
 <html class="no-js" lang="en">
 <head>
@@ -63,52 +141,52 @@
             <!-- Start Header Navigation -->
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-menu"> <i class="fa fa-bars"></i> </button>
-                <a class="navbar-brand" href="index.php"><img src="images/brand/logo-1.png" class="logo logo-scrolled" alt=""> </a>
+                <a class="navbar-brand" href="index.html"><img src="images/brand/logo-1.png" class="logo logo-scrolled" alt=""> </a>
             </div>
             <!-- End Header Navigation -->
             <!-- Megamenu -->
             <div class="collapse navbar-collapse" id="navbar-menu">
                 <ul class="nav navbar-nav navbar-right" data-in="fadeInDown" data-out="fadeOutUp">
                     <li class="active ">
-                        <a href="index.php">Home</a>
+                        <a href="index.html">Home</a>
                     </li>
                     <li class="dropdown">
                         <a href="" class="dropdown-toggle" data-toggle="dropdown">Our Story</a>
                         <ul class="dropdown-menu">
-                            <li><a href="about.php">About</a></li>
-                            <li><a href="mission.php">Mission</a></li>
-                            <li><a href="unique.php">How Are We Unique</a></li>
-                            <li><a href="culture.php">Our Culture</a></li>
-                            <li><a href="clients.php">Our Clients</a></li>
+                            <li><a href="about.html">About</a></li>
+                            <li><a href="mission.html">Mission</a></li>
+                            <li><a href="unique.html">How Are We Unique</a></li>
+                            <li><a href="culture.html">Our Culture</a></li>
+                            <li><a href="clients.html">Our Clients</a></li>
                         </ul>
                     </li>
                     <li class="dropdown">
-                        <a href="services.php" class="dropdown-toggle" data-toggle="dropdown">Services</a>
+                        <a href="services.html" class="dropdown-toggle" data-toggle="dropdown">Services</a>
                         <ul class="dropdown-menu">
-                            <li><a href="services.php#staffing">Staffing</a></li>
-                            <li><a href="services.php#transportation">Transportation</a></li>
-                            <li><a href="services.php#behavior">Behavior Supports</a></li>
+                            <li><a href="services.html#staffing">Staffing</a></li>
+                            <li><a href="services.html#transportation">Transportation</a></li>
+                            <li><a href="services.html#behavior">Behavior Supports</a></li>
                         </ul>
                     </li>
                     <li class="dropdown">
                         <a href="" class="dropdown-toggle" data-toggle="dropdown">Employers</a>
                         <ul class="dropdown-menu">
-                           <li><a href="providers.php">Our Service Providers</a></li>
-                            <li><a href="request.php">Request Fof Employee</a></li>
+                           <li><a href="providers.html">Our Service Providers</a></li>
+                            <li><a href="request.html">Request Fof Employee</a></li>
                         </ul>
                     </li>
                     <li class="dropdown">
                         <a href="" class="dropdown-toggle" data-toggle="dropdown">Career Gateway</a>
                         <ul class="dropdown-menu">
-                            <li><a href="testimonial.php">Testimonials</a></li>
-                            <li><a href="application.php">Application for Employment</a></li>
+                            <li><a href="testimonial.html">Testimonials</a></li>
+                            <li><a href="application.html">Application for Employment</a></li>
                         </ul>
                     </li>
                      <li>
-                        <a href="contact.php" >Contact Us</a>
+                        <a href="contact.html" >Contact Us</a>
                     </li>
                      <li>
-                        <a href="registration.php" class="btn btn-default btn-outline hover-effect2" style="padding: 10px;margin: 10px 0">Registration</a>
+                        <a href="registration.html" class="btn btn-default btn-outline hover-effect2" style="padding: 10px;margin: 10px 0">Registration</a>
                     </li>
                 </ul>
             </div>
@@ -145,50 +223,80 @@
     </nav>
     <!-- End Navigation -->
     <!-- Banner -->
-    <div class="div" style="position: relative; overflow: hidden" >
-        <video style="position: absolute; width: 200%;height: 200%;transform: translate(-50%,-50%);left:50%;top: 50%;" autoplay loop id="video-background" muted plays-inline>
-            <source src="video/bg.mkv" type="video/mp4">
-        </video>
-        <section class="inner-intro bg overlay jarallax white-text" data-overlay-color="dark" data-overlay="6" >
-        <div class="container">
-            <div class="row intro-title">
-                <div class="col-sm-12 text-center">
-                    <h1 class="title">Our Culture</h1>
-                </div>
-            </div>
-        </div>
-    </section>
-    </div>
+<!--    <section class="inner-intro dark-bg overlay jarallax" data-overlay-color="dark" data-overlay="8" data-bg-img="images/slide1.jpg" data-jarallax-video="https://www.youtube.com/watch?v=0aCbYxJ9gus">-->
+<!--        <div class="container">-->
+<!--            <div class="row intro-title">-->
+<!--                <div class="col-sm-12 text-center">-->
+<!--                    <h1 class="title">Request An Employee</h1>-->
+<!--                </div>-->
+<!--            </div>-->
+<!--        </div>-->
+<!--    </section>-->
     <!-- End Banner -->
     <!-- Our service -->
     <section class="">
         <div class="container">
             <div class="row">
-                <div class="col-md-12  text-left">
-                    <p class="lead">We will foster a positive team environment by:</p>
-                    <ul class="ml-5">
-                        <li>Putting ethics above all else</li>
-                        <li>Treating everyone fairly</li>
-                        <li>Supporting each other</li>
-                        <li>Balancing work and life</li>
-                    </ul>
-                </div>
-            </div>
-        </div>
-    </section>
-    <section class="inner-intro small-intro theme-bg">
-        <div class="container">
-            <div class="row intro-title">
-                <div class="col-sm-12 text-center">
-                    <h1 class="title">The Outcome Network</h1>
-                </div>
-                <div class="col-sm-12">
-                    <div class="row">
-                        <div class="col-sm-12 text-center"><span class="sub-title">Our network connect people experiencing disability to support and services all across Ontario</span></div>
-                        <div style="display: flex;justify-content: center; width: 100%;padding-top: 30px;">
-                            <a href="application.php" class=" btn btn-default btn-outline animated btn-radius white-border theme-bg white-text fill-white">Submit Your Resume <i class="fa fa-arrow-right" aria-hidden="true"></i></a>
+                <div class="col-md-12 text-left mt-1 ">
+                    <h2 class="mb-1">Request an employee</h2>
+                    <p>Are you looking for an outstanding staff? Please complete the form below or contact us directly:</p>
+                    <!--<div id="formmessage" style="color: red; margin-bottom: 20px;"><?php-->
+                        <!--if(isset($_POST['btn'])) {-->
+                            <!--if ($error) {-->
+                                <!--echo $error;-->
+                            <!--} else {-->
+                                <!--echo $error;-->
+                            <!--}-->
+                        <!--}-->
+                        <!--?></div>-->
+                    <form id="contactform" role="form" method="post" action="" enctype="multipart/form-data">
+                        <div class="row">
+                            <h3 class='mb-1'>Job Information</h3>
+                            <div class="form-group col-md-6">
+                                <input type="text" name="job_name" id="job_name" class="form-control" placeholder="Job Title*">
+                            </div>
+                            <div class="form-group col-md-6">
+                                <input type="text" name="industry" id="industry" class="form-control" placeholder="Industry*">
+                            </div>
+                            <div class="form-group col-md-6">
+                                <select class="form-control" name="time" id="time" placeholder="Is this position temporary or full-time?">
+                                    <option value="" disabled selected>Is this position temporary or full-time?</option>
+                                    <option value="Temporary">Temporary</option>
+                                    <option value="Full-time">Full-time</option>
+                                </select>
+                            </div>
+                            <div class="form-group col-md-6">
+                                <input type="text" name="shift" id="" class="form-control" placeholder="Shift*">
+                            </div>
+                            <div class="form-group col-md-12">
+                                <input type="text" name="location" id="location" class="form-control" placeholder="Location*">
+                            </div>
+
+                            <div class="form-group col-md-12">
+                                <textarea name="responsibility" id="responsibility" class="form-control" rows="3" placeholder="Duties &amp; Responsibilities"></textarea>
+                            </div>
+                            
+                            <h3 class='mb-1'>Your Contact Information</h3>
+                            
+                            <div class="form-group col-md-6">
+                                <input type="text" name="name" id="name" class="form-control" placeholder="Full Name*">
+                            </div>
+                            <div class="form-group col-md-6">
+                                <input type="number" name="phone" id="phone" class="form-control" placeholder="Phone*">
+                            </div>
+                            <div class="form-group col-md-12">
+                                <input type="email" name="email" id="email" class="form-control" placeholder="Email*">
+                            </div>
+                            <div class="form-group col-md-12">
+                               <label for="file">Upload Your Job Description*</label>
+                                <input type="file" name="attach[]" id="file" style="padding: 7px 20px; border: 2px solid #e6e6e6; width: 100%;" >
+                            </div>
+
+                            <div class="form-group col-md-12">
+                                <button name="btn" type="submit" class="btn btn-default btn-rounded fill-dark">Submit</button>
+                            </div>
                         </div>
-                    </div>
+                    </form>
                 </div>
             </div>
         </div>
@@ -207,18 +315,18 @@
                     <div class="col-sm-3 col-xs-6 col-xx-12 mb-4">
                         <h6 class="text-uppercase">Services</h6>
                         <ul class="list-unstyled">
-                            <li><a href="services.php#staffing">Staffing</a></li>
-                            <li><a href="services.php#transportation">Transportation</a></li>
-                            <li><a href="services.php#behavior">Behavior Supports</a></li>
+                            <li><a href="services.html#staffing">Staffing</a></li>
+                            <li><a href="services.html#transportation">Transportation</a></li>
+                            <li><a href="services.html#behavior">Behavior Supports</a></li>
                         </ul>
                     </div>
                     <div class="col-sm-3 col-xs-6 col-xx-12 mb-4">
                         <h6 class="text-uppercase">Our Story</h6>
                         <ul class="list-unstyled">
-                            <li><a href="about.php">About</a></li>
-                            <li><a href="mission.php">Mission</a></li>
-                            <li><a href="unique.php">How Are We Unique</a></li>
-                            <li><a href="culture.php">Our Culture</a></li>
+                            <li><a href="about.html">About</a></li>
+                            <li><a href="mission.html">Mission</a></li>
+                            <li><a href="unique.html">How Are We Unique</a></li>
+                            <li><a href="culture.html">Our Culture</a></li>
                         </ul>
                     </div>
                     <div class="col-sm-3 col-xs-6 col-xx-12 mb-4">
@@ -280,4 +388,5 @@
     <!-- custom -->
     <script type="text/javascript" src="js/custom.js"></script>
 </body>
-   </html>
+
+</html>
